# SemprexControl

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/samc/: Samc.txt
src/semprexcontrol/: __init__.py  cli.py  samc_client.py  samc_server.py  samc_wrapper.py  utils.py
src/semprexcontrol/programs/: main_program.py
src/semprexcontrol/tests/: __init__.py  test_samc.py  test_wrapper.py
