[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semprexcontrol"
version = "0.1.0"
description = "Python program for controlling lab stage made by Semprex"
readme = "README.rst"
authors = [
  {name = "Daniel Winnie", email = "winnieda@umich.edu"}
]
maintainers = [
  {name = "Daniel Winnie", email = "winnieda@umich.edu"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/winnieda/semprexcontrol/issues"
changelog = "https://github.com/winnieda/semprexcontrol/blob/master/changelog.md"
homepage = "https://github.com/winnieda/semprexcontrol"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

